--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-document-title": "0.0.1",
     "ember-cli-ember-data": "0.1.0",
     "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-moment": "0.0.1",
     "express": "^4.1.1",
     "glob": "^3.2.9",
     "originate": "0.1.5"
