--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "jquery": "^1.11.1",
     "qunit": "~1.12.0",
     "ember-qunit": "~0.1.8",
-    "ember": "1.6.1",
+    "ember": "1.7.0-beta.4",
+    "ember-data": "1.0.0-beta.8",
     "ember-resolver": "~0.1.5",
     "loader": "stefanpenner/loader.js#1.0.0",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.2",
