--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-moment": "0.0.1",
     "express": "^4.1.1",
     "glob": "^3.2.9",
-    "originate": "0.1.5"
+    "originate": "0.1.5",
+    "ember-cli-pretender": "0.1.1"
   }
 }
