--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "ember-cli-ember-data": "0.1.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-moment": "0.0.1",
+    "ember-cli-pretender": "0.1.1",
     "express": "^4.1.1",
     "glob": "^3.2.9",
-    "originate": "0.1.5",
-    "ember-cli-pretender": "0.1.1"
+    "node-uuid": "^1.4.1",
+    "originate": "0.1.5"
   }
 }
