--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -44,7 +44,8 @@
     "andThen",
     "currentURL",
     "currentPath",
-    "currentRouteName"
+    "currentRouteName",
+    "findFirstAndCheckText"
   ],
   "node": false,
   "browser": false,
